syntax = "proto3";

package samdasualddle;

// The alddle service definition.
service Alddle {
  rpc Register (RegisterRequest) returns (RegisterReply) {}
  rpc Unregister (UnregisterRequest) returns (UnregisterReply) {}
  rpc MatchAndNotify (MatchAndNotifyRequest) returns (MatchAndNotifyReply) {}
}

message RegisterRequest {
  string id = 8;
  string email = 1;
  string departure = 2;
  string destination = 3;
  int32 expense = 4;
  int32 duration = 5;
  string from_date = 6; // TODO add iso type
  string to_date = 7;
}

message RegisterReply {
  
}

message UnregisterRequest {
  string register_id = 1;
}

message UnregisterReply {
  string message = 1;
}

message MatchAndNotifyRequest {
}

message MatchAndNotifyReply {
    
}